--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required( VERSION 2.8 )
 project( HelloSLAM )
-add_executable( helloSLAM  helloSLAM.cpp )
+add_library( helloSLAM  libHelloSLAM.cpp )
