--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
 cmake_minimum_required( VERSION 2.8 )
 project( HelloSLAM )
-add_library( helloSLAM  libHelloSLAM.cpp )
+add_library( hello_shared SHARED libHelloSLAM.cpp )
+add_executable( useHello useHello.cpp )
+target_link_libraries( useHello hello_shared )
